@@ -17,11 +17,10 @@
  */
 package org.apache.avro.generic;
 
-/** A generic instance of a record schema.  Fields are accessible by name as
- * well as by index. */
-public interface GenericRecord extends IndexedRecord {
-  /** Set the value of a field given its name. */
-  void put(String key, Object v);
-  /** Return the value of a field given its name. */
-  Object get(String key);
+/** A record implementation that permits field access by integer index.*/
+public interface IndexedRecord extends GenericContainer {
+  /** Set the value of a field given its position in the schema. */
+  void put(int i, Object v);
+  /** Return the value of a field given its position in the schema. */
+  Object get(int i);
 }
